// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectOverviewForm Fields Defines form fields Project form reducer should handle GET_PROJECT_DETAIL_ERROR with and return initialState 1`] = `
Object {
  "error": Object {
    "success": false,
  },
  "event": 3,
  "form": Object {
    "projectAdditionalDetail": Object {
      "authorizedBy": "",
      "authorizedByHop": "",
      "authorizedBySecond": "",
      "authorizedByThird": "",
      "budget": 1,
      "cdmNotifiable": false,
      "commenceDate": "date",
      "comments": "",
      "completionDate": "date",
      "creditCheckResult": "",
      "enquiryReceivedFrom": "",
      "enquiryTypeId": 1,
      "finalAccountDate": "date",
      "firstValuationDate": "date",
      "formOfContract": "",
      "insurance": "",
      "isProjectLive": false,
      "liquidatedDamages": "",
      "mainContractor": "",
      "milestones": "",
      "paymentTerms": "",
      "projectAddDetailId": "",
      "projectId": "",
      "projectRisk1": "",
      "projectRisk2": "",
      "projectRisk3": "",
      "projectRiskControlMeasure1": "",
      "projectRiskControlMeasure2": "",
      "projectRiskControlMeasure3": "",
      "retention": "",
      "siteAddress": "",
      "valuationIntervals": "",
      "workTypeId": -1,
    },
    "projectApprovals": Array [
      Object {
        "approvalStatus": 0,
        "approvalStatusDescription": "",
        "approverType": 0,
        "approverTypeDescription": "",
        "projectApprovalId": "",
        "projectApprovalRange": 0,
        "projectApprovalRangeDescription": "",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
    ],
    "projectId": "",
  },
  "initialStateSetForProjectApprovals": false,
  "loading": false,
  "notify": 2,
  "projectActivities": Object {
    "data": Array [],
    "error": null,
    "loading": false,
    "notify": 0,
  },
}
`;

exports[`ProjectOverviewForm Fields Defines form fields Project form reducer should handle add project overview successfully 1`] = `
Object {
  "error": null,
  "event": undefined,
  "form": Object {
    "projectAdditionalDetail": Object {
      "authorizedBy": "",
      "authorizedByHop": "",
      "authorizedBySecond": "",
      "authorizedByThird": "",
      "budget": 1,
      "cdmNotifiable": false,
      "commenceDate": "date",
      "comments": "",
      "completionDate": "date",
      "creditCheckResult": "",
      "enquiryReceivedFrom": "",
      "enquiryTypeId": 1,
      "finalAccountDate": "date",
      "firstValuationDate": "date",
      "formOfContract": "",
      "insurance": "",
      "isProjectLive": false,
      "liquidatedDamages": "",
      "mainContractor": "",
      "milestones": "",
      "paymentTerms": "",
      "projectAddDetailId": "",
      "projectId": "",
      "projectRisk1": "",
      "projectRisk2": "",
      "projectRisk3": "",
      "projectRiskControlMeasure1": "",
      "projectRiskControlMeasure2": "",
      "projectRiskControlMeasure3": "",
      "retention": "",
      "siteAddress": "",
      "valuationIntervals": "",
      "workTypeId": -1,
    },
    "projectApprovals": Array [
      Object {
        "approvalStatus": 0,
        "approvalStatusDescription": "",
        "approverType": 0,
        "approverTypeDescription": "",
        "projectApprovalId": "",
        "projectApprovalRange": 0,
        "projectApprovalRangeDescription": "",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
    ],
    "projectId": "",
  },
  "initialStateSetForProjectApprovals": false,
  "loading": false,
  "notify": 1,
  "projectActivities": Object {
    "data": Array [],
    "error": null,
    "loading": false,
    "notify": 0,
  },
}
`;

exports[`ProjectOverviewForm Fields Defines form fields Project form reducer should handle edit project overview successfully 1`] = `
Object {
  "error": null,
  "event": undefined,
  "form": Object {
    "projectAdditionalDetail": Object {
      "authorizedBy": "",
      "authorizedByHop": "",
      "authorizedBySecond": "",
      "authorizedByThird": "",
      "budget": 1,
      "cdmNotifiable": false,
      "commenceDate": "date",
      "comments": "",
      "completionDate": "date",
      "creditCheckResult": "",
      "enquiryReceivedFrom": "",
      "enquiryTypeId": 1,
      "finalAccountDate": "date",
      "firstValuationDate": "date",
      "formOfContract": "",
      "insurance": "",
      "isProjectLive": false,
      "liquidatedDamages": "",
      "mainContractor": "",
      "milestones": "",
      "paymentTerms": "",
      "projectAddDetailId": "",
      "projectId": "",
      "projectRisk1": "",
      "projectRisk2": "",
      "projectRisk3": "",
      "projectRiskControlMeasure1": "",
      "projectRiskControlMeasure2": "",
      "projectRiskControlMeasure3": "",
      "retention": "",
      "siteAddress": "",
      "valuationIntervals": "",
      "workTypeId": -1,
    },
    "projectApprovals": Array [
      Object {
        "approvalStatus": 0,
        "approvalStatusDescription": "",
        "approverType": 0,
        "approverTypeDescription": "",
        "projectApprovalId": "",
        "projectApprovalRange": 0,
        "projectApprovalRangeDescription": "",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
    ],
    "projectId": "",
  },
  "initialStateSetForProjectApprovals": false,
  "loading": false,
  "notify": 1,
  "projectActivities": Object {
    "data": Array [],
    "error": null,
    "loading": false,
    "notify": 0,
  },
}
`;

exports[`ProjectOverviewForm Fields Defines form fields Project form reducer should handle get get additional details successfully 1`] = `
Object {
  "error": null,
  "event": 3,
  "form": Object {
    "projectAdditionalDetail": Object {
      "authorizedBy": "",
      "authorizedByHop": "",
      "authorizedBySecond": "",
      "authorizedByThird": "",
      "budget": 1,
      "cdmNotifiable": false,
      "commenceDate": "date",
      "comments": "",
      "completionDate": "date",
      "creditCheckResult": "",
      "enquiryReceivedFrom": "",
      "enquiryTypeId": 1,
      "finalAccountDate": "date",
      "firstValuationDate": "date",
      "formOfContract": "",
      "insurance": "",
      "isProjectLive": false,
      "liquidatedDamages": "",
      "mainContractor": "",
      "milestones": "",
      "paymentTerms": "",
      "projectAddDetailId": "",
      "projectId": "",
      "projectRisk1": "",
      "projectRisk2": "",
      "projectRisk3": "",
      "projectRiskControlMeasure1": "",
      "projectRiskControlMeasure2": "",
      "projectRiskControlMeasure3": "",
      "retention": "",
      "siteAddress": "",
      "valuationIntervals": "",
      "workTypeId": -1,
    },
    "projectApprovals": Array [
      Object {
        "approvalStatus": 0,
        "approvalStatusDescription": "",
        "approverType": 0,
        "approverTypeDescription": "",
        "projectApprovalId": "",
        "projectApprovalRange": 0,
        "projectApprovalRangeDescription": "",
        "projectId": "",
        "showRangeLabel": true,
        "userId": "",
      },
    ],
    "projectId": "1",
  },
  "initialStateSetForProjectApprovals": false,
  "loading": false,
  "notify": 0,
  "projectActivities": Object {
    "data": Array [],
    "error": null,
    "loading": false,
    "notify": 0,
  },
}
`;
